After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795236 - plug leaks
plug leaks
Status: RESOLVED FIXED
Product: libgweather
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: future
Assigned To: libgweather-maint
libgweather-maint
Depends on:
Blocks:
 
 
Reported: 2018-04-13 16:59 UTC by Carlos Garnacho
Modified: 2020-11-17 13:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Plug xmlGetProp leaks (4.57 KB, patch)
2018-04-13 16:59 UTC, Carlos Garnacho
none Details | Review
Plug variant leaks (1022 bytes, patch)
2018-04-13 16:59 UTC, Carlos Garnacho
committed Details | Review

Description Carlos Garnacho 2018-04-13 16:59:10 UTC
I'm attaching a couple of patches fixing a handful of leaks.
Comment 1 Carlos Garnacho 2018-04-13 16:59:36 UTC
Created attachment 370899 [details] [review]
Plug xmlGetProp leaks

A couple of parser were doing a number of calls to this function without
freeing the resulting string.
Comment 2 Carlos Garnacho 2018-04-13 16:59:43 UTC
Created attachment 370900 [details] [review]
Plug variant leaks

gweather_location_format_two_deserialize() is fetching two nested variants,
but not freeing them afterwards.
Comment 4 André Klapper 2020-11-13 16:32:17 UTC
(In reply to Carlos Garnacho from comment #2)
> Created attachment 370900 [details] [review] [review]
> Plug variant leaks
> 
> gweather_location_format_two_deserialize() is fetching two nested variants,
> but not freeing them afterwards.

Carlos: Not yet committed. Any idea who could review this? hadess? chergert? Someone else? Thanks.
Comment 5 Carlos Garnacho 2020-11-13 17:27:14 UTC
Not sure tbh. One thing for sure, it's got a better chance in GitLab :). Will put it there.
Comment 6 Carlos Garnacho 2020-11-13 17:40:36 UTC
Now at https://gitlab.gnome.org/GNOME/libgweather/-/merge_requests/79
Comment 7 André Klapper 2020-11-17 13:20:13 UTC
Thanks. Patch merged.