owm: Plug xmlGetProp leaks

The OWM parser has some xmlGetProp() string leaks. Free the
resulting string in all missed cases.

https://bugzilla.gnome.org/show_bug.cgi?id=795236